# desafio-gdash-2025-02

./: .cache.sqlite  main.py  pyproject.toml
